<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <!--  title  -->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginBottom="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="Edit"
                android:textSize="26sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tv_date4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:text="2022-11-20"
                android:textSize="19sp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/yellow_green_600"/>
        <!-- edit name -->
        <EditText
            android:id="@+id/et_name2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/et_border2"
            android:hint="@string/name"
            android:inputType="text" />
        <!-- date and time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/et_border2"
                android:layout_marginEnd="7dp">
                <EditText
                    android:id="@+id/et_date2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:ems="8"
                    android:hint="@string/date"
                    android:inputType="date"/>
                <Button
                    android:id="@+id/btn_calender3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_baseline_calendar_month_24"
                    android:backgroundTint="@color/yellow_green_900"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_border2"
                android:layout_weight="2" >
                <EditText
                    android:id="@+id/et_time2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:ems="4"
                    android:hint="@string/time"
                    android:inputType="time"/>
                <Button
                    android:id="@+id/btn_alarm2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/ic_baseline_alarm_24"
                    android:backgroundTint="@color/yellow_green_900"/>
            </RelativeLayout>
        </LinearLayout>
        <EditText
            android:id="@+id/et_repeat2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="7dp"
            android:background="@drawable/et_border2"
            android:hint="@string/repeat"
            android:inputType="number" />
        <EditText
            android:id="@+id/et_note2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="7dp"
            android:paddingVertical="13dp"
            android:background="@drawable/et_border2"
            android:hint="@string/note"
            android:inputType="none" />
        <!-- save -->
        <Button
            android:id="@+id/btn_upgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_gravity="center"
            android:text="@string/upgrade" />
    </LinearLayout>

</ScrollView>