<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity"
    android:orientation="vertical">
    <!--  title  -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="3dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="Search"
            android:textSize="26sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_date5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="2022-11-20"
            android:textSize="19sp"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/purple_600"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/et_border3"
        >
        <EditText
            android:id="@+id/et_name3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:background="@null"
            android:ems="8"
            android:hint="input name"
            android:inputType="text"/>

        <Button
            android:id="@+id/btn_clear2"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="2dp"
            android:layout_toStartOf="@+id/btn_calender4"
            android:background="@drawable/ic_baseline_clear_24"
            android:backgroundTint="@color/purple_900"
            android:contentDescription="@string/clear" />

        <Button
            android:id="@+id/btn_calender4"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/btn_search2"
            android:background="@drawable/ic_baseline_calendar_month_24"
            android:backgroundTint="@color/purple_900"
            android:contentDescription="@string/calender" />

        <Button
            android:id="@+id/btn_search2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_baseline_search_24"
            android:backgroundTint="@color/purple_900"
            android:contentDescription="@string/search" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="7dp"
        android:text="@string/search_result"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="11dp"
        android:divider="#00000000"
        android:dividerHeight="8dp"/>
</LinearLayout>